tests/cn-seq-test-gen/src/tutorial_queue.fail.c.test
return code: 2
cn-seq-test-gen/src/tutorial_queue.fail.c:156:16: warning: deprecated keyword 'Owned', use 'RW' instead
      take B = Owned<struct queue_cell>(back);
               ^~~~~ 
/tmp/run_tests.sh: line 31: unexpected EOF while looking for matching `"'
/tmp/run_tests.sh: line 41: syntax error: unexpected end of file
